fix: word-spacing

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -55,7 +55,6 @@ body {
 
 body {
   font-family: var(--font-neue-haas);
-  word-spacing: 2px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
