--- a/src/ui/Footer/Footer.module.scss
+++ b/src/ui/Footer/Footer.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   background-color: var(--color-black);
   padding: 50px 0;
+  word-spacing: 2px;
 
   @include media.screen('tablet') {
     padding: 48px 0;
